Fix typos in the httphandlers
