# docs/swagger.yaml
@@ -1262,6 +1262,47 @@ paths:
           schema:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Return the logs for a running analysis
+  /vice/{analysis-id}/pods:
+    get:
+      description: |-
+        Lists the k8s pods associated with the provided external-id. For now
+        just returns pod info in the format `{"pods" : [{}]}`
+      operationId: list-pods
+      parameters:
+      - description: Analysis ID
+        in: path
+        name: analysis-id
+        required: true
+        type: string
+      - description: Username
+        in: query
+        name: user
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httphandlers.ListPodsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: Lists the k8s pods associated with the provided external-id
   /vice/{analysis-id}/time-limit:
     get:
       description: Gets the time limit for an analysis on behalf of a user.
@@ -2025,45 +2066,4 @@ paths:
           schema:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Lists services in use by VICE apps.
-  /vice{analysis-id}/pods:
-    get:
-      description: |-
-        Lists the k8s pods associated with the provided external-id. For now
-        just returns pod info in the format `{"pods" : [{}]}`
-      operationId: list-pods
-      parameters:
-      - description: Analysis ID
-        in: path
-        name: analysis-id
-        required: true
-        type: string
-      - description: Username
-        in: query
-        name: user
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/httphandlers.ListPodsResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-      summary: Lists the k8s pods associated with the provided external-id
 swagger: "2.0"
