# httphandlers/resources.go
@@ -15,16 +15,16 @@ type FilteredDeploymentsResponse struct {
 	Deployments []incluster.DeploymentInfo `json:"deployments"`
 }
 
-//	@ID				filterable-deployments
-//	@Summary		Lists all of the deployments.
-//	@Description	Returns a filtered listing of deployments in use by VICE apps.
-//	@Description	The key-value pairs in the query string are used to filter the deployments.
-//	@Description	The key-value pairs are not listed as parameters.
-//	@Produce		json
-//	@Success		200	{object}	FilteredDeploymentsResponse
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/listing/deployments [get]
+// @ID				filterable-deployments
+// @Summary		Lists all of the deployments.
+// @Description	Returns a filtered listing of deployments in use by VICE apps.
+// @Description	The key-value pairs in the query string are used to filter the deployments.
+// @Description	The key-value pairs are not listed as parameters.
+// @Produce		json
+// @Success		200	{object}	FilteredDeploymentsResponse
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/listing/deployments [get]
 func (h *HTTPHandlers) FilterableDeploymentsHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -43,16 +43,16 @@ type FilteredPodsResponse struct {
 	Pods []incluster.PodInfo `json:"pods"`
 }
 
-//	@ID				filterable-pods
-//	@Summary		Returns a listing of the pods in a VICE analysis.
-//	@Description	Returns a filtered listing of pods in use by VICE apps.
-//	@Description	The key-value pairs in the query string are used to filter the pods.
-//	@Description	The key-value pairs are not listed as parameters.
-//	@Produce		json
-//	@Success		200	{object}	FilteredPodsResponse
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/listing/pods [get]
+// @ID				filterable-pods
+// @Summary		Returns a listing of the pods in a VICE analysis.
+// @Description	Returns a filtered listing of pods in use by VICE apps.
+// @Description	The key-value pairs in the query string are used to filter the pods.
+// @Description	The key-value pairs are not listed as parameters.
+// @Produce		json
+// @Success		200	{object}	FilteredPodsResponse
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/listing/pods [get]
 func (h *HTTPHandlers) FilterablePodsHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -71,15 +71,15 @@ type FilteredConfigMapsResponse struct {
 	ConfigMaps []incluster.ConfigMapInfo `json:"configmaps"`
 }
 
-//	@ID				filterable-configmaps
-//	@Summary		Lists configmaps in use by VICE apps.
-//	@Description	Lists configmaps in use by VICE apps. The query parameters
-//	@Description	are used to filter the results and aren't listed as parameters.
-//	@Produce		json
-//	@Success		200	{object}	FilteredConfigMapsResponse
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/listing/configmaps [get]
+// @ID				filterable-configmaps
+// @Summary		Lists configmaps in use by VICE apps.
+// @Description	Lists configmaps in use by VICE apps. The query parameters
+// @Description	are used to filter the results and aren't listed as parameters.
+// @Produce		json
+// @Success		200	{object}	FilteredConfigMapsResponse
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/listing/configmaps [get]
 func (h *HTTPHandlers) FilterableConfigMapsHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -98,15 +98,15 @@ type FilteredServicesResponse struct {
 	Services []incluster.ServiceInfo `json:"services"`
 }
 
-//	@ID				filterable-services
-//	@Summary		Lists services in use by VICE apps.
-//	@Description	Lists services in use by VICE apps. The query parameters
-//	@Description	are used to filter the results and aren't listed as parameters.
-//	@Produce		json
-//	@Success		200	{object}	FilteredServicesResponse
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/listing/services [get]
+// @ID				filterable-services
+// @Summary		Lists services in use by VICE apps.
+// @Description	Lists services in use by VICE apps. The query parameters
+// @Description	are used to filter the results and aren't listed as parameters.
+// @Produce		json
+// @Success		200	{object}	FilteredServicesResponse
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/listing/services [get]
 func (h *HTTPHandlers) FilterableServicesHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -125,15 +125,15 @@ type FilteredIngressesResponse struct {
 	Ingresses []incluster.IngressInfo `json:"ingresses"`
 }
 
-//	@ID				filterable-ingresses
-//	@Summary		Lists ingresses in use by VICE apps.
-//	@Description	Lists ingresses in use by VICE apps. The query parameters
-//	@Description	are used to filter the results and aren't listed as parameters.
-//	@Produce		json
-//	@Success		200	{object}	FilteredIngressesResponse
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/listing/ingresses [get]
+// @ID				filterable-ingresses
+// @Summary		Lists ingresses in use by VICE apps.
+// @Description	Lists ingresses in use by VICE apps. The query parameters
+// @Description	are used to filter the results and aren't listed as parameters.
+// @Produce		json
+// @Success		200	{object}	FilteredIngressesResponse
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/listing/ingresses [get]
 func (h *HTTPHandlers) FilterableIngressesHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -148,15 +148,15 @@ func (h *HTTPHandlers) FilterableIngressesHandler(c echo.Context) error {
 	})
 }
 
-//	@ID				admin-describe-analysis
-//	@Summary		Lists resources by subdomain
-//	@Description	Returns a listing entry for a single analysis
-//	@Description	associated with the host/subdomain passed in as 'host' from the URL.
-//	@Param			host	path		string	true	"Host/Subdomain"
-//	@Success		200		{object}	incluster.ResourceInfo
-//	@Failure		400		{object}	common.ErrorResponse
-//	@Failure		500		{object}	common.ErrorResponse
-//	@Router			/vice/admin/{host}/description [get]
+// @ID				admin-describe-analysis
+// @Summary		Lists resources by subdomain
+// @Description	Returns a listing entry for a single analysis
+// @Description	associated with the host/subdomain passed in as 'host' from the URL.
+// @Param			host	path		string	true	"Host/Subdomain"
+// @Success		200		{object}	incluster.ResourceInfo
+// @Failure		400		{object}	common.ErrorResponse
+// @Failure		500		{object}	common.ErrorResponse
+// @Router			/vice/admin/{host}/description [get]
 func (h *HTTPHandlers) AdminDescribeAnalysisHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	host := c.Param("host")
@@ -172,20 +172,20 @@ func (h *HTTPHandlers) AdminDescribeAnalysisHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, listing)
 }
 
-//	@ID				describe-analysis
-//	@Summary		Returns resources by user and subdomain.
-//	@Description	Returns a listing entry for a single analysis associated
-//	@Description	with the host/subdomain passed in as 'host' from the URL.
-//	@Description	The user passed in must have access to the VICE analysis.
-//	@Produce		json
-//	@Param			user	query		string	true	"username"
-//	@Param			host	path		string	tru		"subdomain"
-//	@Success		200		{object}	incluster.ResourceInfo
-//	@Failure		400		{object}	common.ErrorResponse
-//	@Failure		403		{object}	common.ErrorResponse
-//	@Failure		404		{object}	common.ErrorResponse
-//	@Failure		500		{object}	common.ErrorResponse
-//	@Router			/vice/{host}/description [get]
+// @ID				describe-analysis
+// @Summary		Returns resources by user and subdomain.
+// @Description	Returns a listing entry for a single analysis associated
+// @Description	with the host/subdomain passed in as 'host' from the URL.
+// @Description	The user passed in must have access to the VICE analysis.
+// @Produce		json
+// @Param			user	query		string	true	"username"
+// @Param			host	path		string	tru		"subdomain"
+// @Success		200		{object}	incluster.ResourceInfo
+// @Failure		400		{object}	common.ErrorResponse
+// @Failure		403		{object}	common.ErrorResponse
+// @Failure		404		{object}	common.ErrorResponse
+// @Failure		500		{object}	common.ErrorResponse
+// @Router			/vice/{host}/description [get]
 func (h *HTTPHandlers) DescribeAnalysisHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 
@@ -249,20 +249,20 @@ func (h *HTTPHandlers) DescribeAnalysisHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, listing)
 }
 
-//	@ID				filterable-resources
-//	@Summary		Returns resources for a VICE analysis
-//	@Description	Returns all of the k8s resources associated with a VICE analysis
-//	@Description	but checks permissions to see if the requesting user has permission
-//	@Description	to access the resource. The rest of the query map is used to filter
-//	@Description	resources returned from the handler.
-//	@Produce		json
-//	@Param			user	query		string	true	"username"
-//	@Success		200		{object}	incluster.ResourceInfo
-//	@Failure		400		{object}	common.ErrorResponse
-//	@Failure		403		{object}	common.ErrorResponse
-//	@Failure		404		{object}	common.ErrorResponse
-//	@Failure		500		{object}	common.ErrorResponse
-//	@Router			/vice/listing [get]
+// @ID				filterable-resources
+// @Summary		Returns resources for a VICE analysis
+// @Description	Returns all of the k8s resources associated with a VICE analysis
+// @Description	but checks permissions to see if the requesting user has permission
+// @Description	to access the resource. The rest of the query map is used to filter
+// @Description	resources returned from the handler.
+// @Produce		json
+// @Param			user	query		string	true	"username"
+// @Success		200		{object}	incluster.ResourceInfo
+// @Failure		400		{object}	common.ErrorResponse
+// @Failure		403		{object}	common.ErrorResponse
+// @Failure		404		{object}	common.ErrorResponse
+// @Failure		500		{object}	common.ErrorResponse
+// @Router			/vice/listing [get]
 func (h *HTTPHandlers) FilterableResourcesHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	user := c.QueryParam("user")
@@ -296,15 +296,15 @@ func (h *HTTPHandlers) FilterableResourcesHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, listing)
 }
 
-//	@ID				admin-filterable-resources
-//	@Summary		Lists resources based on a filter
-//	@Description	Returns k8s resources in the cluster based on the filter. The query
-//	@Description	parameters are used as the filter and are not listed as params here.
-//	@Produce		json
-//	@Success		200	{object}	incluster.ResourceInfo
-//	@Failure		400	{object}	common.ErrorResponse
-//	@Failure		500	{object}	common.ErrorResponse
-//	@Router			/vice/admin/listing [get]
+// @ID				admin-filterable-resources
+// @Summary		Lists resources based on a filter
+// @Description	Returns k8s resources in the cluster based on the filter. The query
+// @Description	parameters are used as the filter and are not listed as params here.
+// @Produce		json
+// @Success		200	{object}	incluster.ResourceInfo
+// @Failure		400	{object}	common.ErrorResponse
+// @Failure		500	{object}	common.ErrorResponse
+// @Router			/vice/admin/listing [get]
 func (h *HTTPHandlers) AdminFilterableResourcesHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 	filter := common.FilterMap(c.Request().URL.Query())
@@ -321,19 +321,19 @@ type ListPodsResponse struct {
 	Pods []incluster.RetPod `json:"pods"`
 }
 
-//	@ID				list-pods
-//	@Summary		Lists the k8s pods associated with the provided external-id
-//	@Description	Lists the k8s pods associated with the provided external-id. For now
-//	@Description	just returns pod info in the format `{"pods" : [{}]}`
-//	@Produce		json
-//	@Param			analysis-id	path		string	true	"Analysis ID"
-//	@Param			user		query		string	true	"Username"
-//	@Success		200			{object}	ListPodsResponse
-//	@Failure		400			{object}	common.ErrorResponse
-//	@Failure		403			{object}	common.ErrorResponse
-//	@Failure		404			{object}	common.ErrorResponse
-//	@Failure		500			{object}	common.ErrorResponse
-//	@Router			/vice{analysis-id}/pods [get]
+// @ID				list-pods
+// @Summary		Lists the k8s pods associated with the provided external-id
+// @Description	Lists the k8s pods associated with the provided external-id. For now
+// @Description	just returns pod info in the format `{"pods" : [{}]}`
+// @Produce		json
+// @Param			analysis-id	path		string	true	"Analysis ID"
+// @Param			user		query		string	true	"Username"
+// @Success		200			{object}	ListPodsResponse
+// @Failure		400			{object}	common.ErrorResponse
+// @Failure		403			{object}	common.ErrorResponse
+// @Failure		404			{object}	common.ErrorResponse
+// @Failure		500			{object}	common.ErrorResponse
+// @Router			/vice/{analysis-id}/pods [get]
 func (h *HTTPHandlers) PodsHandler(c echo.Context) error {
 	ctx := c.Request().Context()
 
